--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "opencv"]
 	path = opencv
 	url = git@github.com:opencv/opencv.git
+[submodule "benchmark"]
+	path = benchmark
+	url = git@github.com:google/benchmark.git
+[submodule "googletest"]
+	path = googletest
+	url = git@github.com:google/googletest.git
